...
              const SizedBox(
                height: 13 + kToolbarHeight,
              ),
              Padding(
                padding: const EdgeInsets.only(left: 43, right: 43),
                child: Text(
                  "Country picker case study for LifeTap",
                  style: Theme.of(context).textTheme.headline1,
                ),
              ),
              const SizedBox(
                height: 13,
              ),
...
                            builder: (context, provider, child) {
                          return GestureDetector(
                            onTap: () {},
                            child: Column(
                              children: [
                                Text(
                                  "Selected countries",
                                  textAlign: TextAlign.center,
                                  style: Theme.of(context).textTheme.headline2,
                                ),
                                const SizedBox(
                                  height: 30,
                                ),
...
