...
              padding: const EdgeInsets.only(left: 16),
              child: SvgPicture.asset('assets/images/search_icon.svg',
                  width: 16, height: 16, semanticsLabel: 'Cancel Selection'),
            ),
          ],
        ),
        hintText: "Search",
        hintStyle: Theme.of(context).textTheme.bodyText2?.copyWith(
              fontSize: 17,
              color: subFontColor,
            ),
        border: OutlineInputBorder(
            borderRadius: BorderRadius.circular(10),
...
                    text: "Country already selected",
                    color: Theme.of(context).errorColor);
              }
            }
          : null,
      child: Text(
        'Select',
        style: Theme.of(context).textTheme.bodyText2?.copyWith(
            fontSize: 16,
            color: countryList.isNotEmpty
                ? Theme.of(context).primaryColor
                : Theme.of(context).primaryColor.withOpacity(0.5)),
      ),
...
